--- a/protogeni/lib/GeniCM.pm.in
+++ b/protogeni/lib/GeniCM.pm.in
@@ -237,6 +237,7 @@ sub DiscoverResources($)
 {
     my ($argref) = @_;
     my $credential = $argref->{'credential'};
+    my $available = $argref->{'available'};
     my $user_uuid  = $ENV{'GENIUSER'};
 
     $credential = GeniCredential->CreateFromSigned($credential);
@@ -249,6 +250,11 @@ sub DiscoverResources($)
 	return GeniResponse->Create(GENIRESPONSE_FORBIDDEN, undef,
 				    "Invalid credentials for operation");
     }
+
+    # Oh, for $*%(s sake.  Frontier::RPC2 insists on representing a
+    # Boolean as its own object type -- which Perl always interprets as
+    # true, regardless of the object's value.  Undo all of that silliness.
+    $available = defined( $available ) && $available->value;
 
     #
     # A sitevar controls whether external users can get any nodes.
@@ -270,7 +276,9 @@ sub DiscoverResources($)
     #
     # Use ptopgen in xml mode to spit back an xml file. 
     #
-    if (! open(AVAIL, "$PTOPGEN -x -g -r -p GeniSlices |")) {
+    my $invocation = "$PTOPGEN -x -g -r -p GeniSlices";
+    $invocation .= " -a" unless $available;
+    if (! open(AVAIL, "$invocation |")) {
 	return GeniResponse->Create(GENIRESPONSE_ERROR, undef,
 				    "Could not start avail");
     }
