Added support for a GetVersion call on the CH, CM, SA and SES.  The return value is 1, which is hereby defined to mean "GetVersion() and all previous API features are supported".

--- a/protogeni/lib/GeniCH.pm.in
+++ b/protogeni/lib/GeniCH.pm.in
@@ -39,6 +39,18 @@ my $BOSSNODE       = "@BOSSNODE@";
 my $OURDOMAIN      = "@OURDOMAIN@";
 my $SLICESHUTDOWN  = "$TB/sbin/protogeni/shutdownslice";
 
+my $API_VERSION = 1;
+
+#
+# Tell the client what API revision we support.  The correspondence
+# between revision numbers and API features is to be specified elsewhere.
+# No credentials are required.
+#
+sub GetVersion()
+{
+    return GeniResponse->Create( GENIRESPONSE_SUCCESS, $API_VERSION );
+}
+
 #
 # Get a credential to use the ClearingHouse. For the moment, the initial
 # credential will be provided to callers with the proper certificate, which
