--- a/protogeni/xmlrpc/protogeni-ses.pl.in
+++ b/protogeni/xmlrpc/protogeni-ses.pl.in
@@ -124,7 +124,8 @@ LogStart(0, undef, LIBAUDIT_LOGTBOPS());
 Genixmlrpc->SetContext(Genixmlrpc->Context($certificate));
 
 my $responder = Frontier::Responder->new( "methods" => {
-    "Map" => \&GeniSES::Map
+    "GetVersion" => \&GeniSES::GetVersion,
+    "Map"        => \&GeniSES::Map
    }
 );
 
