--- a/tbsetup/libosload.pm.in
+++ b/tbsetup/libosload.pm.in
@@ -55,12 +55,13 @@ sub osload ($$) {
     my ($args, $result) = @_;
 
     # These come in from the caller.
-    my $imageid;
+    my @imageids;
     my $waitmode    = 1;
     my @nodes       = ();
     my $noreboot    = 0;
     my $asyncmode   = 0;
     my $zerofree    = 0;
+    my $prepare     = 0;
     my $swapinfo    = 0;
 
     # Locals
@@ -69,7 +70,7 @@ sub osload ($$) {
     my $usedefault  = 1;
     my $mereuser    = 0;
     my $rowref;
-    my $image;
+    my @images;
     my $this_user;
 
     if (!defined($args->{'nodelist'})) {
@@ -88,7 +89,11 @@ sub osload ($$) {
 	$debug = $args->{'debug'};
     }
     if (defined($args->{'imageid'})) {
-	$imageid    = $args->{'imageid'};
+	@imageids = split /,/, $args->{'imageid'};
+	$usedefault = 0;
+    }
+    if (defined($args->{'imageids'})) {
+	@imageids = @{$args->{'imageids'}};
 	$usedefault = 0;
     }
     if (defined($args->{'asyncmode'})) {
@@ -96,6 +101,9 @@ sub osload ($$) {
     }
     if (defined($args->{'zerofree'})) {
 	$zerofree = $args->{'zerofree'};
+    }
+    if (defined($args->{'prepare'})) {
+	$prepare = $args->{'prepare'};
     }
 
     if (defined($args->{'swapinfo'})) {
@@ -131,36 +139,38 @@ sub osload ($$) {
 	}
     }
 
-    if (defined($imageid)) {
-	$image = Image->Lookup($imageid);
+    foreach my $i (0 .. $#imageids) {
+	my $imageid = $imageids[$i];
+	$images[$i] = Image->Lookup($imageid);
+	my $image = $images[$i];
 	if (!defined($image)) {
 	    tberror("Could not map $imageid to its object!");
 	    return -1;
 	}
-    }
 
-    #
-    # Check permission to use the imageid.
-    # 
-    if (defined($image) && $mereuser &&
-	! $image->AccessCheck($this_user, TB_IMAGEID_READINFO)) {
-	tberror "You do not have permission to load $image";
-	return -1;
-    }
+	#
+	# Check permission to use the imageid.
+	# 
+    
+	if ($mereuser &&
+	    ! $image->AccessCheck($this_user, TB_IMAGEID_READINFO)) {
+	    tberror "You do not have permission to load $image";
+	    return -1;
+	}
 
-    #
-    # If there's a maxiumum number of concurrent loads listed for the image,
-    # check to see if we'll go over the limit, by checking to see how many
-    # other nodes are currently booting thie image's default_osid. This is
-    # NOT intended to be strong enforcement of license restrictions, just a
-    # way to catch mistakes.
-    #
-    if (defined($image) &&
-	!TBImageLoadMaxOkay($image->imageid(), scalar(@nodes), @nodes)) {
-	tberror 
+	#
+	# If there's a maxiumum number of concurrent loads listed for the image,
+	# check to see if we'll go over the limit, by checking to see how many
+	# other nodes are currently booting thie image's default_osid. This is
+	# NOT intended to be strong enforcement of license restrictions, just a
+	# way to catch mistakes.
+	#
+	if (!TBImageLoadMaxOkay($image->imageid(), scalar(@nodes), @nodes)) {
+	    tberror 
 	    "Would exceed maxiumum concurrent instances ".
 		"limitation for $image";
-	return -1;
+	    return -1;
+	}
     }
 
     #
@@ -218,55 +228,27 @@ sub osload ($$) {
 	    tberror "$node: No default imageid defined!";
 	    goto failednode;
 	}
-	my $default_image = Image->Lookup($default_imageid);
-	if (!defined($default_image)) {
-	    tberror("Could not map $default_imageid to its object!");
-	    return -1;
+	my @default_imageids = split/,/, $default_imageid;
+	my @default_images;
+	foreach my $default_imageid (@default_imageids) {
+	    my $default_image = Image->Lookup($default_imageid);
+	    if (!defined($default_image)) {
+		tberror("Could not map $default_imageid to its object!");
+		return -1;
+	    }
+	    push @default_images, $default_image;
+	}
+
+	if ($usedefault) {
+	    $prepare = 1;
+	    @imageids = @default_imageids;
+	    @images   = @default_images;
 	}
 	
-	if ($usedefault) {
-	    $imageid = $default_imageid;
-	    $image   = $default_image;
-	}
-
-	print STDERR "osload: Using $image for $node\n"
-	    if $debug;
-
-	#
-	# We try to avoid repeated queries to DB for info that does not change
-	# by caching the image info on the first use.  GetImageInfo() will
-	# perform various one-time checks as well.
-	# 
-	if (!exists($imageinfo{$imageid}) && !GetImageInfo($image, $node)) {
-	    goto failednode;
-	}
-	$rowref = $imageinfo{$imageid};
-	if ($rowref eq 'BADIMAGE') {
-	    goto failednode;
-	}
-
-	my $loadpart       = $rowref->{'loadpart'};
-	my $loadlen        = $rowref->{'loadlength'};
-	my $imagepath      = $rowref->{'path'};
-	my $defosid        = $rowref->{'default_osid'};
-	my $maxwait	   = $rowref->{'maxloadwait'};
-	my $imagepid	   = $rowref->{'pid'};
-	my $access_key	   = $rowref->{'access_key'};
-
-	my $osinfo = OSinfo->Lookup($defosid);
-	if (!defined($osinfo)) {
-	    tberror("Could map map OSID $defosid to its object!");
-	    goto failednode;
-	}
-
-	print "osload ($node): Changing default OS to $osinfo\n";
-	if (!$TESTMODE) {
-	    system("$osselect $defosid $node");
-	    if ($?) {
-		tberror "$node: os_select $defosid failed!";
-		goto failednode;
-	    }
-	}
+	my @imageidxs = (0 .. $#imageids);
+	my $defosid;
+	my $maxwait = 0;
+	my @access_keys;
 
 	#
 	# If loading an image (which is not the default) then schedule
@@ -274,98 +256,156 @@ sub osload ($$) {
 	# will get a fresh default image before getting reallocated to
 	# another experiment.
 	#
-	if ($imageid ne $default_imageid &&
-	    $nodeobject->SetSchedReload($default_image) != 0) {
-	    tberror
-		"$node: Could not schedule default reload";
-	    goto failednode;
-	}
+	# XXX: Disabled for now, is it even relevent anymore.
+	#
+	#if ($imageid ne $default_imageid &&
+	#    $nodeobject->SetSchedReload($default_image) != 0) {
+	#    tberror
+	#	"$node: Could not schedule default reload";
+	#    goto failednode;
+	#}
 
-	#
-	# XXX assumes a DOS MBR, but this is ingrained in the DB schema
-	# as well (i.e., the images.part[1234]_osid fields).
-	#
-	my $MINPART = 1;
-	my $MAXPART = 4;
-
-	#
-	# Assign partition table entries for each partition in the image
-	# that has an OSID associated with it.
-	#
-	# This is complicated by the fact that an image that covers only
-	# part of the slices should only change the partition table entries
-	# for the subset of slices that are written to disk...
-	#
-	# ...UNLESS, the new image requires a different version of the MBR
-	# in which case we must invalidate all partitions except the ones we
-	# are loading since the partition boundaries may have changed.
-	#
-	my $startpart = $loadpart == 0 ? $MINPART : $loadpart;
-	my $endpart   = $startpart + $loadlen;
+	foreach my $i (@imageidxs) {
+	    my $imageid = $imageids[$i];
+	    my $image = $images[$i];
 	
-	for (my $i = $MINPART; $i <= $MAXPART; $i++) {
-	    my $partname = "part${i}_osid";
-	    my $dbresult;
+	    print STDERR "osload: Using $image for $node\n"
+		if $debug;
+
+	    #
+	    # We try to avoid repeated queries to DB for info that does not change
+	    # by caching the image info on the first use.  GetImageInfo() will
+	    # perform various one-time checks as well.
+	    # 
+	    if (!exists($imageinfo{$imageid}) && !GetImageInfo($image, $node)) {
+		goto failednode;
+	    }
+	    $rowref = $imageinfo{$imageid};
+	    if ($rowref eq 'BADIMAGE') {
+		goto failednode;
+	    }
+	    
+	    my $loadpart   = $rowref->{'loadpart'};
+	    my $loadlen    = $rowref->{'loadlength'};
+	    my $imagepath  = $rowref->{'path'};
+	    my $imagepid   = $rowref->{'pid'};
+	    $maxwait += $rowref->{'maxloadwait'};
+	    $access_keys[$i] = $rowref->{'access_key'};
+
+	    #
+	    # When loading multiple images, use the osinfo from the
+	    # last image
+	    #
+	    if ($i == $imageidxs[-1]) {
+		$defosid = $rowref->{'default_osid'};
+
+		my $osinfo = OSinfo->Lookup($defosid);
+		if (!defined($osinfo)) {
+		    tberror("Could map map OSID $defosid to its object!");
+		    goto failednode;
+		}
+		
+		print "osload ($node): Loading $image\n" if $i > 0;
+		print "osload ($node): Changing default OS to $osinfo\n";
+		if (!$TESTMODE) {
+		    system("$osselect $defosid $node");
+		    if ($?) {
+			tberror "$node: os_select $defosid failed!";
+			goto failednode;
+		    }
+		}
+	    } else {
+		print "osload ($node): Loading $image\n";
+	    }
 	    
 	    #
-	    # Partition is outside the range affected by this image.
-	    # Normally, we just leave it alone, unless a change of MBR
-	    # is implied by the current image.
+	    # XXX assumes a DOS MBR, but this is ingrained in the DB schema
+	    # as well (i.e., the images.part[1234]_osid fields).
 	    #
-	    if ($i < $startpart || $i >= $endpart) {
-		if (defined($rowref->{'mbr_version'})) {
-		    $dbresult =
-			DBQueryWarn("select mbr_version ".
-				    " from partitions as p,images as i ".
-				    " where p.imageid=i.imageid ".
-				    " and node_id='$node' and partition='$i'");
-		    if ($dbresult && $dbresult->numrows) {
-			my ($pmbr) = $dbresult->fetchrow_array();
-			if ($pmbr != $rowref->{'mbr_version'}) {
-			    tbwarn("$node: Existing partition $i inconsistent".
-				   " with new image partitioning,".
-				   " invalidating existing partition");
-			    $dbresult =
-				DBQueryWarn("delete from partitions ".
-					    "where node_id='$node' and ".
-					    "partition='$i'");
-			    if (!$dbresult) {
-				tberror("$node: Could not update ".
-					"partition table");
-				goto failednode;
+	    my $MINPART = 1;
+	    my $MAXPART = 4;
+	    
+	    #
+	    # Assign partition table entries for each partition in the image
+	    # that has an OSID associated with it.
+	    #
+	    # This is complicated by the fact that an image that covers only
+	    # part of the slices should only change the partition table entries
+	    # for the subset of slices that are written to disk...
+	    #
+	    # ...UNLESS, the new image requires a different version of the MBR
+	    # in which case we must invalidate all partitions except the ones we
+	    # are loading since the partition boundaries may have changed.
+	    #
+	    my $startpart = $loadpart == 0 ? $MINPART : $loadpart;
+	    my $endpart   = $startpart + $loadlen;
+	    
+	    for (my $i = $MINPART; $i <= $MAXPART; $i++) {
+		my $partname = "part${i}_osid";
+		my $dbresult;
+		
+		#
+		# Partition is outside the range affected by this image.
+		# Normally, we just leave it alone, unless a change of MBR
+		# is implied by the current image.
+		#
+		if ($i < $startpart || $i >= $endpart) {
+		    if (defined($rowref->{'mbr_version'})) {
+			$dbresult =
+			    DBQueryWarn("select mbr_version ".
+					" from partitions as p,images as i ".
+					" where p.imageid=i.imageid ".
+					" and node_id='$node' and partition='$i'");
+			if ($dbresult && $dbresult->numrows) {
+			    my ($pmbr) = $dbresult->fetchrow_array();
+			    if ($pmbr != $rowref->{'mbr_version'}) {
+				# XXX: Is this right in the context of multiple images
+				tbwarn("$node: Existing partition $i inconsistent".
+				       " with new image partitioning,".
+				       " invalidating existing partition");
+				$dbresult =
+				    DBQueryWarn("delete from partitions ".
+						"where node_id='$node' and ".
+						"partition='$i'");
+				if (!$dbresult) {
+				    tberror("$node: Could not update ".
+					    "partition table");
+				    goto failednode;
+				}
 			    }
 			}
 		    }
+		    next;
 		}
-		next;
-	    }
-
-	    #
-	    # This image has an OSID in the current partition,
-	    # replace the partition table info.
-	    #
-	    if (defined($rowref->{$partname})) {
-		my $osid = $rowref->{$partname};
 		
-		$dbresult =
-		    DBQueryWarn("replace into partitions ".
-				"(node_id,partition,osid,imageid,imagepid) ".
-				"values ".
-				"('$node','$i','$osid','$imageid','$imagepid')");
+		#
+		# This image has an OSID in the current partition,
+		# replace the partition table info.
+		#
+		if (defined($rowref->{$partname})) {
+		    my $osid = $rowref->{$partname};
+		    
+		    $dbresult =
+			DBQueryWarn("replace into partitions ".
+				    "(node_id,partition,osid,imageid,imagepid) ".
+				    "values ".
+				    "('$node','$i','$osid','$imageid','$imagepid')");
+		}
+		#
+		# Otherwise, if there is no OS for a particular image partition,
+		# clear any current partitions table info.
+		#
+		else {
+		    $dbresult =
+			DBQueryWarn("delete from partitions ".
+				    "where node_id='$node' and partition='$i'");
+		}
+		if (!$dbresult) {
+		    tberror "$node: Could not update partition table";
+		    goto failednode;
+		}
 	    }
-	    #
-	    # Otherwise, if there is no OS for a particular image partition,
-	    # clear any current partitions table info.
-	    #
-	    else {
-		$dbresult =
-		    DBQueryWarn("delete from partitions ".
-				"where node_id='$node' and partition='$i'");
-	    }
-	    if (!$dbresult) {
-		tberror "$node: Could not update partition table";
-		goto failednode;
-	    }
+	    
 	}
 
 	#
@@ -397,15 +437,17 @@ sub osload ($$) {
 	    $reload_func = \&SetupReloadFrisbee;
 	    $reboot_required = !$noreboot; # Reboot unless $noreboot flag set
 
-	    # This is passed along so that remote node can request the file.
-	    # Make sure the image object has an access key defined.
-	    if ($nodeobject->isremotenode() && !defined($access_key)) {
-		$access_key = TBGenSecretKey();
-
-		$rowref->{'access_key'} = $access_key;
-		if ($image->Update({'access_key' => $access_key}) != 0) {
-		    tberror "$node: Could not initialize image access key";
-		    goto failednode;
+	    foreach my $i (@imageidxs) {
+		# This is passed along so that remote node can request the file.
+		# Make sure the image object has an access key defined.
+		if ($nodeobject->isremotenode() && !defined($access_keys[$i])) {
+		    $access_keys[$i] = TBGenSecretKey();
+		    
+		    $rowref->{'access_key'} = $access_keys[$i];
+		    if ($images[$i]->Update({'access_key' => $access_keys[$i]}) != 0) {
+			tberror "$node: Could not initialize image access key";
+			goto failednode;
+		    }
 		}
 	    }
 	}
@@ -415,14 +457,15 @@ sub osload ($$) {
 	# later, we'll know how to handle it
 	#
 	$reload_info{$node} = {
-	    'node'    => $node,
-	    'mode'    => $reload_mode,
-	    'func'    => $reload_func,
-	    'imageid' => $imageid,
-	    'osid'    => $defosid,
-	    'reboot'  => $reboot_required,
-	    'zerofree'=> $zerofree,
-	    'maxwait' => $maxwait
+	    'node'     => $node,
+	    'mode'     => $reload_mode,
+	    'func'     => $reload_func,
+	    'imageids' => \@imageids,
+	    'osid'     => $defosid,
+	    'reboot'   => $reboot_required,
+	    'zerofree' => $zerofree,
+	    'prepare'  => $prepare,
+	    'maxwait'  => $maxwait
 	};
 
 	print "Setting up reload for $node (mode: $reload_mode)\n";
@@ -800,8 +843,9 @@ sub SetupReloadFrisbee($)
 {
     my $reload_info   = $_[0];
     my $node          = $reload_info->{'node'};
-    my $imageid       = $reload_info->{'imageid'};
+    my $imageids      = $reload_info->{'imageids'};
     my $zerofree      = $reload_info->{'zerofree'};
+    my $prepare       = $reload_info->{'prepare'};
     my $osid          = TBNodeDiskloadOSID($node);
 
     #
@@ -809,21 +853,33 @@ sub SetupReloadFrisbee($)
     # OS to load. See tmcd. 
     #
     my $query_result = 
-	DBQueryWarn("replace into current_reloads ".
-		    "(node_id, image_id, mustwipe) values ".
-		    "('$node', '$imageid', $zerofree)");
+	DBQueryWarn("delete from current_reloads where node_id = '$node'");
     return -1
 	if (!$query_result);
+
+    my $idx = 1;
+    foreach my $imageid (@$imageids) {
+	my $prepare0 = $idx == 1 && $prepare ? 1 : 0;
+	my $query_result = 
+	    DBQueryWarn("insert into current_reloads ".
+			"(node_id, idx, image_id, mustwipe, prepare) values ".
+			"('$node', $idx, '$imageid', $zerofree, $prepare0)");
+	return -1
+	    if (!$query_result);
+	++$idx;
+    }
 
     system("$osselect -1 $osid $node");
     if ($?) {
 	tberror "os_select $osid failed!";
 	return -1;
     }
-    system("$FRISBEELAUNCHER " . ($debug ? "-d ": "") . "$imageid");
-    if ($?) {
-	tberror "Frisbee Launcher ($imageid) failed!";
-	return -1;
+    foreach my $imageid (@$imageids) {
+	system("$FRISBEELAUNCHER " . ($debug ? "-d ": "") . "$imageid");
+	if ($?) {
+	    tberror "Frisbee Launcher ($imageid) failed!";
+	    return -1;
+	}
     }
     return 0;
 }
