--- a/tbsetup/os_load.in
+++ b/tbsetup/os_load.in
@@ -17,9 +17,11 @@ sub usage()
     print("Usage: os_load [-s] [[-p <pid>] -i <imageid>] <node> [node ...]\n".
 	  "       os_load [-s] [[-p <pid>] -i <imageid>] -e pid,eid\n".
 	  "       os_load -l\n".
-	  "Use -i to specify an image ID. Use node default otherwise.\n".
+	  "Use -i to specify a comma seperated list of image IDs.\n".
+          "       Use the node default otherwise.\n".
 	  "Use -p to specify the project ID in which to find the imageid.\n".
-	  "Use -m to specify the internal name if an image ID.\n".
+	  "       If the image is not found in <pid> also try ".TB_OPSPID().".\n".
+	  "Use -m to specify the internal name(s) if an image ID.\n".
 	  "Use -s to start reload, but do not wait for it to complete.\n".
 	  "Use -w to wait for the nodes to finish booting.\n".
 	  "Use -r to supress rebooting nodes - you need to to it yourself\n".
@@ -28,21 +30,23 @@ sub usage()
 	  "Use -z <style> to zero all unallocated blocks on the disk\n".
 	  "       style==0: do not zero (same as not using -z)\n".
 	  "       style==1: let frisbee do the zeroing\n".
-	  "       style==2: zero disk before running frisbee\n");
+	  "       style==2: zero disk before running frisbee\n".
+          "Use -P to prepare the disk as if a whole disk image was loaded\n");
     exit(-1);
 }
-my $optlist   = "swldi:e:p:m:rz:";
+my $optlist   = "swldi:e:p:m:rz:P";
 my $waitmode  = 1;
 my $listonly  = 0;
 my $debug     = 0;
 my $noreboot  = 0;
 my $zerofree  = 0;
+my $prepare   = 0;
 my @nodes     = ();
 my $imagepid;
-my $imagename;
-my $imageid;
 my $pid;
 my $eid;
+my @imageids = ();
+my $imagenames;
 
 # Configure variables
 my $TB		= "@prefix@";
@@ -91,6 +95,8 @@ $noreboot = 1
     if (defined($options{"r"}));
 $zerofree = $options{"z"}
     if (defined($options{"z"}));
+$prepare = 1
+    if (defined($options{"P"}));
 
 #
 # Figure out which nodes. Choice of nodes on command line, or all nodes in an
@@ -150,15 +156,6 @@ else {
 if (defined($options{"i"})) {
     usage()
 	if (defined($options{"m"}));
-    
-    $imagename = $options{"i"};
-    
-    if ($imagename =~ /^([-\w\.\+]+)$/) {
-	$imagename = $1;
-    }
-    else {
-	die("*** Bad data in imagename: $imagename.\n");
-    }
 
     if (defined($options{"p"})) {
 	$imagepid = $options{"p"};
@@ -170,21 +167,29 @@ if (defined($options{"i"})) {
 	    die("*** Bad data in imagepid: $imagepid.\n");
 	}
     }
+    
+    $imagenames = $options{"i"};
 
-    #
-    # If -p option given, use that.
-    # If in experiment mode, then use the pid of the experiment, unless
-    # a -p option was given.
-    # Otherwise look in the system project.
-    #
-    if (defined($imagepid)) {
-	if (! ($imageid = TBImageID($imagepid, $imagename))) {
-	    die("*** $0:\n".
-		"    No such image $imagename in project $imagepid!\n");
+    foreach my $imagename (split /,/, $imagenames) {
+	
+	if ($imagename =~ /^([-\w\.\+]+)$/) {
+	    $imagename = $1;
 	}
-    }
-    else {
-	if (defined($pid)) {
+	else {
+	    die("*** Bad data in imagename: $imagename.\n");
+	}
+	
+	#
+	# If -p option given, use that.
+	# If in experiment mode, then use the pid of the experiment, unless
+	# a -p option was given.
+	# Otherwise look in the system project.
+	#
+	my $imageid;
+	if (defined($imagepid)) {
+	    $imageid = TBImageID($imagepid, $imagename);
+	}
+	if (! $imageid && defined($pid)) {
 	    $imageid = TBImageID($pid, $imagename);
 	}
 	if (! $imageid) {
@@ -192,8 +197,9 @@ if (defined($options{"i"})) {
 	}
 	if (! $imageid) {
 	    die("*** $0:\n".
-		"    No such image $imagename!\n");
+		"	 No such image $imagename!\n");
 	}
+	push @imageids, $imageid;
     }
 }
 
@@ -204,13 +210,16 @@ if (defined($options{"m"})) {
     usage()
 	if (defined($options{"i"}));
 
-    $imageid = $options{"m"};
-    
-    if ($imageid =~ /^([-\w\.\+]+)$/) {
-	$imageid = $1;
-    }
-    else {
-	die("*** Bad data in imageid: $imageid\n");
+    foreach my $imageid (split /,/, $options{"i"}) {
+
+	if ($imageid =~ /^([-\w\.\+]+)$/) {
+	    $imageid = $1;
+	}
+	else {
+	    die("*** Bad data in imageid: $imageid\n");
+	}
+
+	push @imageids, $imageid;
     }
 }
 
@@ -229,7 +238,7 @@ foreach my $node ( @nodes ) {
 	# is an image ID, assume they have made this mistake and stop.
 	#
 	my $_pid = defined($imagepid) ? $imagepid : TB_OPSPID();
-	if ($first && !defined($imagename) && TBImageID($_pid, $nodeid)) {
+	if ($first && !defined($imagenames) && TBImageID($_pid, $nodeid)) {
 	    print "*** reload: forgot the -i before image name $nodeid?\n";
 	    exit(1);
 	}
@@ -259,10 +268,11 @@ $osloadargs{'debug'}    = $debug;
 $osloadargs{'waitmode'} = $waitmode;
 $osloadargs{'noreboot'} = $noreboot;
 $osloadargs{'zerofree'} = $zerofree;
+$osloadargs{'prepare'}  = $prepare;
 $osloadargs{'nodelist'} = [ map { $_->node_id() } @nodes ];
 # No imageid means to load the default image.
-$osloadargs{'imageid'}  = $imageid
-    if (defined($imageid));
+$osloadargs{'imageids'} = [ @imageids ]
+    if (@imageids);
 $osloadargs{'swapinfo'} = 1;
 
 exit(osload(\%osloadargs, \%failednodes));
