The previous commit did correctly fail when the databases were not present. Now let's go a step further, and actually make it succeed when they're there.

--- a/protogeni/lib/genischemacheck.pl.in
+++ b/protogeni/lib/genischemacheck.pl.in
@@ -42,8 +42,8 @@ closedir( DIR );
 # don't think we can rely on that stuff being installed at this point...
 my $outofdate = 0;
 for my $db ( "geni", "geni-ch", "geni-cm" ) {
-    next unless qx{$mysql $db}; # if this is a new site, the databases might
-        # not even exist yet
+    next unless qx{$mysql $db < /dev/null }; # if this is a new site, the 
+        # databases might not even exist yet
     my $dbversion = qx{$mysql $db -e "SELECT value FROM version_info WHERE name='dbrev';"};
     $outofdate = 1 if $dbversion != $latest;
 }
