--- a/tbsetup/swapexp.in
+++ b/tbsetup/swapexp.in
@@ -865,7 +865,7 @@ if (! $batch && ! $template_mode && !$genimode) {
 
 	my $exit_code = $? >> 8;
 
-	if (!$quiet && $exit_code != 0) {
+	if ($exit_code != 0) {
 	    my $d = tblog_lookup_error();
 	    my $output = tblog_format_error($d);
 	    if ($xmlout) {
@@ -880,7 +880,7 @@ if (! $batch && ! $template_mode && !$genimode) {
 		}
 		$d->{output} = $output;
 	        print SOUT RPC::XML::response->new($d)->as_string(), "\n";
-	    } else {
+	    } elsif (!$quiet) {
 		print $output;
 	    }
 	}
